# twiggy

./: Cargo.toml  README.md
analyze/: Cargo.toml
analyze/src/: lib.rs
analyze/src/analyses/: diff.rs  dominators.rs  garbage.rs  monos.rs  paths.rs  top.rs
ir/: Cargo.toml  ir.rs
job_runner/: Cargo.toml
parser/: Cargo.toml
parser/src/: lib.rs
parser/src/wasm_parse/: mod.rs
twiggy/: Cargo.toml
twiggy/src/: main.rs
