[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = []
description = "Analyses for the Twiggy code size profiler."
license = "Apache-2.0/MIT"
name = "twiggy-analyze"
readme = "../README.md"
repository = "https://github.com/rustwasm/twiggy"
version = "0.8.0"
edition = "2024"

[features]
default = ["emit_json", "emit_csv"]
emit_json = ["dep:serde_json"]
emit_csv = ["dep:csv", "dep:serde"]
clap = ["dep:clap"]

[dependencies]
twiggy-ir = { version = "=0.8.0", path = "../ir" }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"], optional = true }
csv = { version = "1", optional = true }
derive_more = { workspace = true, features = ["display", "from_str"] }
regex = "1"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", features = ["preserve_order"], optional = true }
petgraph = "0.6"
