[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = []
description = "Intermediate representation for the Twiggy code size profiler."
license = "Apache-2.0/MIT"
name = "twiggy-ir"
readme = "../README.md"
repository = "https://github.com/rustwasm/twiggy"
version = "0.8.0"
edition = "2024"

[lib]
path = "./ir.rs"

[dependencies]
cpp_demangle = "0.5"
frozen = "1"
petgraph = "0.8"
rustc-demangle = "0.1"
serde = "1.0"
serde_derive = "1.0"
