[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = []
description = "Common traits for the Twiggy code size profiler."
license = "Apache-2.0/MIT"
name = "twiggy-parser"
readme = "../README.md"
repository = "https://github.com/rustwasm/twiggy"
version = "0.8.0"
edition = "2024"

[features]
default = ["dwarf"]
dwarf = ["object"]

[dependencies]
twiggy-ir = { version = "=0.8.0", path = "../ir" }
anyhow = { workspace = true }
derive_more = { workspace = true, features = ["display", "from_str"] }
object = { version = "0.39", optional = true }
wasmparser = "0.246"
