[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["command-line-utilities", "development-tools", "development-tools::profiling", "wasm"]
description = "Twiggy is a code size profiler."
license = "Apache-2.0/MIT"
name = "twiggy"
readme = "../README.md"
repository = "https://github.com/rustwasm/twiggy"
version = "0.8.0"
edition = "2024"

[badges]
travis-ci = { repository = "rustwasm/twiggy" }

[dependencies]
twiggy-analyze = { version = "=0.8.0", path = "../analyze", features = ["clap"] }
twiggy-ir = { version = "=0.8.0", path = "../ir" }
twiggy-parser = { version = "=0.8.0", path = "../parser" }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
colored = "3"
diff = "0.1"
